--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,17 @@ future==0.18.2
 idna==2.9
 pycparser==2.20
 PySocks==1.7.1
-python-dotenv==0.13.0
+python-dotenv~=0.12.0
 python-telegram-bot==12.7
-requests==2.23.0
+requests~=2.22.0
 six==1.15.0
 tornado==6.0.4
 urllib3==1.25.9
+
+pip~=19.0.3
+wheel~=0.34.2
+py~=1.8.1
+cache~=1.0.3
+setuptools~=40.8.0
+pytest~=5.3.5
+telegram~=0.0.1
